--- a/sass/pagestyles/_variables.scss
+++ b/sass/pagestyles/_variables.scss
@@ -1,6 +1,10 @@
 $color-primario:  #773b5e;
 $color-secundario: #530d36;
 $color-terciario: #F5F5F5;
+@mixin bodysize {
+    display: grid;
+    grid-template-rows: 60px auto 1fr; 
+}
 @mixin out {
     display: none;
     }
