--- a/sass/pagestyles/_desk.scss
+++ b/sass/pagestyles/_desk.scss
@@ -2,102 +2,58 @@
 @import "variables";
     body {
         .contenido {
-            display: grid;
-            grid-template-rows: 0.5fr auto 1fr;
+            @include bodysize; 
         }
     }
-    
-    header {
-        .navbar{
-            @include out;
-        }
-        .nav-desk {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: end;
-            padding-left: 35px;
-            padding-top: 20px;
-            
-            ul {
-                display: flex;
-                flex-wrap: nowrap;
-                width: 50%;
-                justify-content: space-between;
-                padding-right: 60px;
-                list-style: none;
-                            }
-           
-        .navlink a { 
-            text-decoration: none;
-            text-align: end;
-            color: black
-            }
-            li:hover {
-               font-weight: bold;
-               transform: scale(1.15);
-                
-            }
-            li:link {
-                border: solid black 2pt;
-            }
-
-        
-    }
-    }
-    
+   
     main {
         background-color: $color-terciario;
         margin: 35px 25px 25px 25px;
+        object-fit: cover;     
+       .img-mq {
+        @include out;
+        }
+       .contenido-index {
+        display: flex;
+        justify-content: center;
+        }
+       .contenido-main {
+        @include contenidomain;
+        }
+       .contenido-ddp {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-left: 200px;
+        gap: 60px;
         object-fit: cover;
-            
-        
-        .img-mq {
-            @include out;
-        }
-        
-        .contenido-index {
-            display: flex;
-            justify-content: center;
-           }
-
-                  
-        .contenido-main {
-            @include contenidomain;
-        }
-       
-        .contenido-ddp {
-            display: flex;
-            flex-wrap: nowrap;
-            padding-left: 200px;
-            gap: 60px;
-            object-fit: cover;
             .imagen-ddp {
             display: block;
             }
-         }
-         .p-contacto {
-            @include out;                                 
         }
-        .imagen-contacto {
-            display: block;
-            text-align: center;
-            padding: 20px 0;
+        .contenido-grillas {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto;
         }
-
+       .p-contacto {
+        @include out;                                 
+        }
+       .imagen-contacto {
+        display: block;
+        text-align: center;
+        padding: 20px 0;
+        }
        .img-mq-asociate {
         @include out;
-        
-       }
+        }
        .img-mq-sedes {
         @include out;
-       }
+        }
+      
        .img-mq-horarios {
         @include out;
-       }
-        
+        }
     }
-    
 }
 
    
